--- a/new-form.html
+++ b/new-form.html
@@ -50,7 +50,8 @@
           <i class="material-icons">&#xE5C4;</i>
         </a>
         <h2 class="border-title flex-1">Nuevo Formulario</h2>
-        <div>
+        <div class="flexbox">
+          <a class="btn--secondary sright">Vista previa</a>
           <button class="btn--primary">Guardar Formulario</button>
         </div>
       </div>
@@ -117,7 +118,7 @@
       </aside>
       <main class="content-view">
         <div class="content card">
-          <h3>Aquí iría el formulario tal cual se va a ver en el ipad, sólo que con unas barritas en cada pregunta para el drag and drop</h3>
+          <h3>Aquí iría el formulario con drag and drop</h3>
         </div>
       </main>
     </div>
