changed to relative routing

--- a/forms.html
+++ b/forms.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8">
   <title>Thea</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="/app.css">
+  <link rel="stylesheet" href="app.css">
 </head>
 <body class="forms">
   <header class="topbar">
     <div class="wrapper flexbox fullh">
       <div class="topbar-logo">
-        <img src="/img/logo-thea.png" alt="Théa">
+        <img src="img/logo-thea.png" alt="Théa">
       </div>
       <nav class="topbar-navigation">
-        <a href="/" class="active">
+        <a href="index.html" class="active">
           <i class="material-icons">&#xE85D;</i>
           <span>Formularios</span>
         </a>
-        <a href="/">
+        <a href="javascript:void(0)">
           <i class="material-icons">&#xE7FB;</i>
           <span>Usuarios</span>
         </a>
@@ -49,7 +49,7 @@
         <h2 class="border-title flex-1">Formularios</h2>
         <div>
           <button class="btn--secondary sright">Otra Opción</button>
-          <a href="/new-form.html" class="btn--primary">Crear Formulario</a>
+          <a href="new-form.html" class="btn--primary">Crear Formulario</a>
         </div>
       </div>
       <aside class="aside-list" data-sticker='{ "offset": 76, "bottom": 16 }'>
@@ -161,7 +161,7 @@
       </main>
     </div>
   </div>
-  <script src="/vendor.js"></script>
-  <script src="/app.js"></script>
+  <script src="vendor.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
