--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <title>Login | Thea</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="/app.css">
+  <link rel="stylesheet" href="app.css">
 </head>
 <body>
   <div class="centered-container">
     <div class="centered-box">
       <div class="login-logo-container">
-        <img src="/img/logo-thea.png" class="logo-m" alt="Théa">
+        <img src="img/logo-thea.png" class="logo-m" alt="Théa">
       </div>
       <div class="card padbox-2">
         <h2 class="border-title">
@@ -18,7 +18,7 @@
           <br>
           Formularios
         </h2>
-        <form action="/forms.html" class="form">
+        <form action="forms.html" class="form">
           <div class="form-row">
             <input type="text" class="form-input--big" placeholder="Usuario">
           </div>
@@ -43,12 +43,12 @@
           </label>
         </div>
         <div>
-          <a href="#" class="txt-link">¿Olvidaste tu contraseña?</a>
+          <a href="javascript:void(0)" class="txt-link">¿Olvidaste tu contraseña?</a>
         </div>
       </div>
     </div>
   </div>
-  <script src="/vendor.js"></script>
-  <script src="/app.js"></script>
+  <script src="vendor.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
