--- a/new-form.html
+++ b/new-form.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8">
   <title>Thea</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="/app.css">
+  <link rel="stylesheet" href="app.css">
 </head>
 <body class="new-form">
   <header class="topbar">
     <div class="wrapper flexbox fullh">
       <div class="topbar-logo">
-        <img src="/img/logo-thea.png" alt="Théa">
+        <img src="img/logo-thea.png" alt="Théa">
       </div>
       <nav class="topbar-navigation">
-        <a href="/" class="active">
+        <a href="index.html" class="active">
           <i class="material-icons">&#xE85D;</i>
           <span>Formularios</span>
         </a>
-        <a href="/">
+        <a href="javascript:void(0)">
           <i class="material-icons">&#xE7FB;</i>
           <span>Usuarios</span>
         </a>
@@ -46,7 +46,7 @@
   <div class="list-view-layout-main-wrapper wrapper">
     <div class="list-view-layout">
       <div class="head-flex">
-        <a href="/forms.html" class="btn--icon">
+        <a href="forms.html" class="btn--icon">
           <i class="material-icons">&#xE5C4;</i>
         </a>
         <h2 class="border-title flex-1">Nuevo Formulario</h2>
@@ -123,7 +123,7 @@
       </main>
     </div>
   </div>
-  <script src="/vendor.js"></script>
-  <script src="/app.js"></script>
+  <script src="vendor.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
