--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
       </div>
     </div>
   </div>
+  <div class="not-responsive-overlay">
+    <div class="centered-outer">
+      <div class="centered-middle">
+        <div class="centered-inner">
+          <div class="logo">
+            <img src="img/logo-thea.png" alt="Théa">
+          </div>
+          <h4 class="notice">Por favor haz esta ventana más grande</h4>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="vendor.js"></script>
   <script src="app.js"></script>
 </body>
