changed not responsive notice text

--- a/forms.html
+++ b/forms.html
@@ -168,7 +168,7 @@
           <div class="logo">
             <img src="img/logo-thea.png" alt="Théa">
           </div>
-          <h4 class="notice">Por favor haz esta ventana más grande</h4>
+          <h4 class="notice">Por favor haz esta ventana más grande para visualizar el sitio correctamente.</h4>
         </div>
       </div>
     </div>
